Implement edit command.
